add terminal font

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
   --font-sans:
     Lucida Console, Lucida Sans Unicode, Fira Mono, Consolas, Courier New,
     Courier, monospace, Times New Roman;
-
+  --font-terminal: Consolas Bold, Courier New Bold, monospace;
   --background-image-kaguya: url("/background.png");
 }
 
